Preserve deterministic report score order